--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.98"
 clap = { version = "4.5.37", features = ["derive"] }
+crossbeam-channel = "0.5.15"
 ctrlc = "3.4.6"
 dirs = "6.0.0"
 ignore = "0.4.23"
