--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,6 @@ crossbeam-channel = "0.5.15"
 ctrlc = "3.4.6"
 dirs = "6.0.0"
 ignore = "0.4.23"
+serde = { version = "1.0.219", features = ["derive"] }
 skim = { version = "0.16.1", features = [] }
+toml = "0.8.20"
