--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ clap = { version = "4.5.37", features = ["derive"] }
 crossbeam-channel = "0.5.15"
 ctrlc = "3.4.6"
 dirs = "6.0.0"
+human-panic = "2.0.2"
 ignore = "0.4.23"
-serde = { version = "1.0.219", features = ["derive"] }
+serde = { version = "1.0.219", features = ["derive", "rc"] }
 skim = { version = "0.16.1", features = [] }
 toml = "0.8.20"
